Fix spacing before transit sub-modes on Trip page. [Fixes #74242824]

--- a/app/assets-default/stylesheets/trips.css.scss
+++ b/app/assets-default/stylesheets/trips.css.scss
@@ -502,3 +502,7 @@ $legend-height: 20px;
   float: left;
   background-position: center;
 }
+
+#baseModes .trip_proxy_modes {
+  margin-bottom: 0px;
+}
